tests/files/parser_tests/should_fail/110.cmdr
//Should fail minus after number
x = 1-;